 * WARNING: optimization of flat model proxy, dataChanged signal is not hierarchical anymore after we found out it was quite expensive. You need to do explicit hierarchical changes.
 * Added hierarchicalDataChanged signal to Tpy::AccountsModel for explicit signalling of changes in account data affecting contacts data (expensive)

telepathy-qt4-yell 0.1.6 (2011-06-06)
======================================

The "don't call on your model contacts unless necessary" release

Fixes:
 * Make the account model item use the status of the Connection object instead of the account one
 * Change the alias and statusMessage roles of the contact model item to return UTF-8 instead of QString
   have it display correctly in QML with extended characters

telepathy-qt4-yell 0.1.5 (2011-05-26)
======================================

The "shhh, contacts are coming in..." release.

Enhancements:
 * Added role to AccountsModel to get the state of the contact list

Fixes:
 * Fix crash when g_async_initable_new_finish returned error

telepathy-qt4-yell 0.1.4 (2011-05-04)
======================================

The "Aruba, one happy island" release.

Enhancements:
 * Implement removeRows method in AbstractConversationModel
 * Keep count of unread/missed messages in SessionConversationModel
 * Added auto-generate classes for Channel.Interface.CredentialsStorage

Fixes:
 * Fix media call caps update when changed

telepathy-qt4-yell 0.1.3 (2011-04-22)
======================================

The "time-shifting" release.

Enhancements:
 * Refactored the conversation item into purpose-specific items

telepathy-qt4-yell 0.1.2 (2011-04-14)
======================================

The "can I call" release.

Enhancements:
 * Added ContactCapabilities and RequestableChannelClass support for Call.
 * Added some convenience methods to the AccountsModel.
 * Refactored ConversationModel into two classes: AbstractConversationModel